<resources>
    <string name="app_name">Mole Seeker</string>
    <string name="mole_seeker">Mole Seeker</string>
    <string name="skip">SKIP</string>
    <string name="by_kevin_san_gabriel">by Kevin San Gabriel</string>
    <string name="main_menu">Main Menu</string>
    <string name="play_game">Play game!</string>
    <string name="options">Options</string>
    <string name="help">Help</string>
    <string name="moleImg1">moleImg1</string>
    <string name="moleImg3">moleImg3</string>
    <string name="board_size">Board Size:</string>
    <string name="moles"># Moles:</string>
    <string name="settings">Settings</string>
    <string name="found_x_of_y_moles">Found x of y moles</string>
    <string name="scans_used"># Scans used:</string>
    <string name="times_played">Times Played:</string>
    <string name="number_of_moles">Number of moles:</string>
    <string name="button">Button</string>
    <string name="erase_times_played">Erase times played</string>

    <string name= "high_score">High Score: </string>
    <string name="help_txt">> In Mole Seeker, your objective is to find all the moles hidden in the field.\n\n> Clicking on a cell will trigger a scan; if that cell doesn\'t happen to have a mole hiding underneath it, the number of moles hiding in the area of the same column and row as that tile will be displayed on that tile.\n\n> Your goal is to find all the moles using the least number of scans!!!</string>
    <string name="help_title"><u>Help</u></string>
    <string name="back">BACK</string>
    <string name ="about_the_author_title">ABOUT THE AUTHOR</string>
    <string name="about_author_txt">Kevin San Gabriel is a 3rd year undergraduate Computer Science student.  Mole Seeker was developed by Kevin San Gabriel with courtesy to Dr. Brian Fraser and the class he teaches at Simon Fraser University called CMPT 276.</string>
    <string name="references">References: \n\n Koenig, M. (2015). Free Sound Effects | SoundBible.com. [online] Soundbible.com. Available at: http://soundbible.com/ [Accessed 11 June 2018].\nFraser, B. (2018). CMPT 276 Image Resources. Available at: http://www.cs.sfu.ca/CourseCentral/276/bfraser/solutions/images/ImageGallery/index.html [Accessed 14 June 2018].\nSan Gabriel, Kevin (2018), moleicon.png</string>

    <string name="hyperlinkString"><a href ="https://www.cs.sfu.ca/CourseCentral/276/bfraser/index.html">LINK TO CMPT 276 Home Page Summer 2018</a></string>
    <string name="clear_high_scores">CLEAR ALL HIGH SCORES</string>

    <string-array name="board_sizes">
        <item>4x6</item>
        <item>5x10</item>
        <item>6x15</item>
    </string-array>

    <string-array name="num_moles">
        <item>6</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>



</resources>
