<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity">

    <TextView
        android:id="@+id/mainMenuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/main_menu"
        android:textSize="30sp"
        app:fontFamily="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/playGameBtn"
        style="@android:style/Widget.Material.Light.Button.Inset"
        android:layout_width="212dp"
        android:layout_height="64dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="32dp"
        android:paddingBottom="20dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="20dp"
        android:text="@string/play_game"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/optionsBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMenuTitle" />

    <Button
        android:id="@+id/optionsBtn"
        style="@android:style/Widget.Material.Light.Button.Inset"
        android:layout_width="212dp"
        android:layout_height="64dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="20dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="20dp"
        android:text="@string/options"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/helpBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playGameBtn" />

    <Button
        android:id="@+id/helpBtn"
        style="@android:style/Widget.Material.Light.Button.Inset"
        android:layout_width="212dp"
        android:layout_height="64dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="11dp"
        android:paddingBottom="20dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="20dp"
        android:text="@string/help"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optionsBtn" />
</android.support.constraint.ConstraintLayout>